# C_PLUS_PLUS_Projects

./: README.md  Лекции ШАД _ Wiki (2).html
C++/asm/: CMakeLists.txt  README.txt  init-repo.sh  mul.asm  sub.asm  test.hs
C++/bigint/: big_integer.cpp  big_integer.h  tests.cpp
C++/circular-buffer-exam/: CMakeLists.txt  README.txt
C++/circular-buffer-exam/ci-extra/: set-upstream.sh
C++/circular-buffer-exam/src/: circular-buffer.h
C++/circular-buffer-exam/test/: correctness-test.cpp  element.cpp  element.h  exception-safety-test.cpp  fault-injection.cpp  fault-injection.h  performance-test.cpp  random-test.cpp  test-utils.h  traits-test.cpp
C++/list-exam/: CMakeLists.txt  README.txt
C++/list-exam/ci-extra/: set-upstream.sh
C++/list-exam/src/: list.h
C++/list-exam/test/: element.cpp  element.h  fault-injection.cpp  fault-injection.h  test-utils.h  tests.cpp
C++/matrix/: CMakeLists.txt  README.txt  init-repo.sh
C++/matrix/src/: matrix.h
C++/matrix/test/: col_iterator_test.cpp  ctors_test.cpp  operations_test.cpp  test_helpers.h  traits_test.cpp
C++/socow-vector/: CMakeLists.txt  README.txt
C++/socow-vector/ci-extra/: check-lines.sh  set-upstream.sh
C++/socow-vector/src/: socow-vector.h
C++/socow-vector/test/: cow-test.cpp  element.h  performance-test.cpp  small-object-test.cpp  test-utils.h  vector-test.cpp
C++/substr/: CMakeLists.txt  README.txt  build.sh  init-repo.sh  package.yaml  solution.cpp  stack.yaml
C++/substr/app/: Main.hs
C++/substr/src/: Lib.hs
C++/vector/: CMakeLists.txt  README.txt
C++/vector/ci-extra/: set-upstream.sh
C++/vector/src/: vector.h
C++/vector/test/: element.h  tests.cpp
C++/wordcount/: README.txt  init-repo.sh  test.py  wordcount.asm
C++ADVANCED/bimap/: CMakeLists.txt  README.txt
C++ADVANCED/bimap/ci-extra/: set-upstream.sh
C++ADVANCED/bimap/src/: bimap.h  intrusive-set.cpp  intrusive-set.h
C++ADVANCED/bimap/test/: correctness-test.cpp  random-test.cpp  test-classes.cpp  test-classes.h
C++ADVANCED/function/: CMakeLists.txt  README.txt
C++ADVANCED/function/ci-extra/: check-lines.sh  set-upstream.sh
C++ADVANCED/function/src/: function.h  storage.h
C++ADVANCED/function/test/: tests.cpp
C++ADVANCED/intrusive-list/: CMakeLists.txt
C++ADVANCED/intrusive-list/ci-extra/: set-upstream.sh
C++ADVANCED/intrusive-list/src/: intrusive-list.h
C++ADVANCED/intrusive-list/test/: element-test.cpp  iterator-test.cpp  list-test.cpp  test-utils.h
C++ADVANCED/intrusive-ptr/: CMakeLists.txt  LICENSE  README.txt  intrusive_ptr.h  tests.cpp
C++ADVANCED/optional/: CMakeLists.txt  README.txt
C++ADVANCED/optional/ci-extra/: set-upstream.sh
C++ADVANCED/optional/src/: details.h  enable_function.h  optional.h
C++ADVANCED/optional/test/: constexpr-test.cpp  optional-test.cpp  test-object.cpp  test-object.h  traits-test.cpp
C++ADVANCED/perf/: CMakeLists.txt  CMakePresets.json  README.txt  vcpkg.json
C++ADVANCED/perf/ci-extra/: check.py  set-upstream.sh  test.sh
C++ADVANCED/perf/ci-extra/perf/: CMakeLists.txt  jpeg.cpp  json.cpp  logger.cpp  pi.cpp  radix-sort.cpp
C++ADVANCED/perf/perf/: CMakeLists.txt  jpeg.cpp  json.cpp  logger.cpp  pi.cpp  radix-sort.cpp
C++ADVANCED/shared-ptr/: CMakeLists.txt
C++ADVANCED/shared-ptr/ci-extra/: set-upstream.sh  test-valgrind.sh
C++ADVANCED/shared-ptr/src/: control-block.h  shared-ptr.h  weak-ptr.h
C++ADVANCED/shared-ptr/test/: allocation-test.cpp  shared-ptr-test.cpp  test-classes.h  test-object.cpp  test-object.h  weak-ptr-test.cpp
C++ADVANCED/signal/: CMakeLists.txt
C++ADVANCED/signal/ci-extra/: set-upstream.sh
C++ADVANCED/signal/src/: intrusive-list.cpp  intrusive-list.h  signals.h
C++ADVANCED/signal/test/: signals-test.cpp
C++ADVANCED/tuple-exam/: CMakeLists.txt  README.txt
C++ADVANCED/tuple-exam/ci-extra/: set-upstream.sh
C++ADVANCED/tuple-exam/src/: tuple.h  tuple_spaceship.h  tuple_storage.h  tuple_traits.h
C++ADVANCED/tuple-exam/test/: constexpr-test.cpp  test-utils.h  tuple-test.cpp
C++ADVANCED/variant/: CMakeLists.txt  README.txt
C++ADVANCED/variant/ci-extra/: build.sh  set-upstream.sh
C++ADVANCED/variant/src/: variant.h  (+3 more)
GPU/ocl-matmul/: CMakeLists.txt  README.md  main.cpp  multiplication_algorithm.h  omp_algorithm.h  opencl_algorithm.h  program3.cl  report.md
GPU/ocl-matmul/rcprof_1/: rcprof_1.csv  rcprof_1.occupancy  sp_tmp._0_gfx1010.cl  sp_tmp._0_gfx1010.i  sp_tmp._0_gfx1010.s
GPU/ocl-matmul/rcprof_2/: rcprof_2.csv  rcprof_2.occupancy  sp_tmp._0_gfx1010.cl  sp_tmp._0_gfx1010.i  sp_tmp._0_gfx1010.s
GPU/ocl-matmul/rcprof_3/: rcprof_3.csv  rcprof_3.occupancy  sp_tmp._0_gfx1010.cl  sp_tmp._0_gfx1010.i  sp_tmp._0_gfx1010.s
GPU/ocl-matmul/rcprof_gpu24-ocl-matmul-BITree2004/1/: rcprof_1.csv  rcprof_1.occupancy
GPU/ocl-matmul/rcprof_gpu24-ocl-matmul-BITree2004/2/: rcprof_2.csv  rcprof_2.occupancy
GPU/ocl-matmul/rcprof_gpu24-ocl-matmul-BITree2004/3/: rcprof_3.csv  rcprof_3.occupancy
GPU/ocl-matmul/test_data/: in1.txt  out_2.txt  ref2.txt
GPU/ocl-matmul/utils/: benchmark.h  buffer.h  command_queue.h  context.h  device.h  platform.h  program.h
GPU/ocl-prefsum/: CMakeLists.txt  README.md  main.cpp  multiplication_algorithm.h  opencl_algorithm.h  program1.cl  program2.cl  program3.cl  program4.cl  report.md
Opencl/gpu24-ocl-matmul/: multiplication_algorithm.h  omp_algorithm.h  opencl_algorithm.h  program1.cl  program2.cl  report.md
mathlogic/ordinal-calculator/: Makefile  условие
(+102 files in other folders)
